cmake_minimum_required (VERSION 3.16)

project (Lab3)

add_subdirectory(Ability)

add_subdirectory (Golem)

add_subdirectory(Necromancer)

add_subdirectory(Creature)

add_subdirectory(Cell)

add_subdirectory(Characteristic)

add_subdirectory(General_Class)

add_subdirectory(Alive)

add_subdirectory(Unheader)

add_subdirectory(Curse)

add_subdirectory(Necromance)

add_subdirectory(Morphism)
