cmake_minimum_required (VERSION 3.16)

project (Lab3)

add_subdirectory(Ability)

add_subdirectory (Golem)

add_subdirectory(Necromancer)

add_subdirectory(Creature)

add_subdirectory(Cell)

add_subdirectory(Characteristic)

add_subdirectory(DamageCaused)

add_subdirectory(Alive)

add_subdirectory(Unheader)

add_subdirectory(Curse)

add_subdirectory(MyVector)

add_subdirectory(Morphism)

add_subdirectory(Dialogue)

add_subdirectory(Tests)

add_subdirectory(Obstacle)

add_subdirectory(Door)

add_subdirectory(OpenDoor)

add_subdirectory(Lava)

add_subdirectory(Creator_Creature)

add_subdirectory(TableWithAbility)

add_subdirectory(Base)

add_subdirectory(Director)

add_subdirectory(DirectorForFile)

add_subdirectory(Orc)

add_subdirectory(Essence)

add_subdirectory(PushEssence)

add_subdirectory(Desiccation)

add_subdirectory(Utilits)

add_subdirectory(UnResponsive)

add_subdirectory(Necromancy)

add_subdirectory(TakeDamage)

add_subdirectory(Controler)

add_subdirectory(Matrix)

add_subdirectory(MakeCharacteristicForGolem)

add_subdirectory(Player)

add_subdirectory(Room)