# CMakeList.txt: проект CMake для lab2_b; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab2_b "lab2_b.cpp" "lab2_b.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
